# open-screenshot-generator

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.claude/skills/app-screenshots/: SKILL.md
.claude/skills/gpt4free-provider-sync/: SKILL.md
.claude/skills/stock-image-assets/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: deploy.yml  desktop.yml
docs/: AI-AGENT.md  DESKTOP.md  PRODUCT-HUNT-LAUNCH.md  blueprint.md  image-asset-licenses.md
extension/: README.md  manifest.json
extension/src/: background.ts  bridge.ts  chrome.d.ts  protocol.ts
extension/src/adapters/: chatgpt.ts  claude.ts  copilot.ts  deepseek.ts  driver.ts  gemini.ts  glm.ts  perplexity.ts  qwen.ts
promo/: README.md  package-lock.json  package.json  remotion.config.ts
promo/public/: music-steps.m4a  music.m4a
promo/scripts/: capture-steps.js  fitness-screen.html  gen-music-steps.js  gen-music.js
promo/src/: Promo.tsx  PromoAI.tsx  Root.tsx  theme.ts
promo/src/steps/: Cam.tsx  (+12 more)
public/: CNAME  splash.html
scripts/: gen-ai-catalog.mjs  set-version.mjs
src/: database.ts
src-tauri/: .taurignore  Cargo.toml  Entitlements.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: assistant.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: devtools.rs  lib.rs  main.rs  mcp_server.rs  settings.rs  splash.rs  web_session.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Analytics.tsx
src/contexts/: ClipboardContext.tsx
src/lib/: analytics.ts  basePath.ts  desktop.ts  deviceRegistry.ts  elementLibrary.ts  imageLibrary.ts  mediaStore.ts  sizePresets.ts  templateCategories.ts
src/services/: fontService.ts  projectService.ts
src/types/: artboard.ts  fonts.ts
website/: 404.html  README.md  app-preview-video-maker.html  app-store-screenshot-generator.html  app-store-screenshot-sizes.html  appscreens-alternative.html  google-play-screenshot-sizes.html  index.html  llms.txt  play-store-screenshot-generator.html  privacy.html  robots.txt  site.webmanifest  sitemap.xml  terms.html  vercel.json
website/css/: main.css
website/js/: main.js
(+209 files in other folders)
