[package]
name = "artboard-studio"
version = "0.1.0"
description = "Artboard Studio - device mockup and app screenshot design studio"
authors = ["CCRS Tech <info@ccrstech.com>"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "artboard_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Minimal blocking HTTP server for the opt-in local MCP server (mcp_server.rs).
# Localhost only, one accept thread + a thread per request; no async runtime, and
# a clean shutdown via recv_timeout so the on/off toggle can stop it instantly.
tiny_http = "0.12"

# Screenshot capture of the assistant windows for the operation timeline.
# Windows only: WebView2's CapturePreview renders even while the window is
# hidden, so a background run is still traceable. Versions must match the ones
# wry already resolves (webview2-com 0.38 -> windows 0.61) or the COM types the
# `with_webview` controller hands back will not line up.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
base64 = "0.22"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Shell",
  # devtools.rs: find the inspector window in our own process tree and WM_CLOSE
  # it, since WebView2 exposes no way to close or query it.
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_UI_WindowsAndMessaging",
] }

# `devtools` keeps open_devtools() available outside debug builds, for Settings >
# Developer tools. Windows only, on purpose: the same feature is a *private* API
# on macOS, which would put the Mac App Store build (docs/DESKTOP.md) at risk of
# rejection. Cargo unions features per target, so mac/Linux release builds ship
# without it and devtools.rs compiles the item out there.
tauri = { version = "2", features = ["devtools"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
